--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
     <body>
-        
-    </body>
+        <h1><B>LEONARDO YUDI TAKII 1A</B></h1>
+    <h1>valorant</h1>
+    <p>valorant é um jogo eletrônico multijogador gratuito para jogar de tiro em primeira pessoa desenvolvido e publicado pela <b>riot games</b>. </p>
+
+    <h2>Jogabilidade</h2>
+    <p>Duas equipes de cinco jogam uma contra a outra, e os jogadores assumem o papel de <b>agentes</b> com habilidades únicas. No modo de jogo principal, a equipe atacante tem uma bomba, chamada Spike, que eles precisam plantar em um local. Se a equipe atacante proteger com sucesso a bomba e ela detonar, eles ganharão um ponto. Se a equipe defensora desarmar com sucesso a bomba ou o cronômetro de 100 segundos da rodada expirar, a equipe defensora receberá um ponto. Eliminar todos os membros da equipe adversária também ganha uma rodada. A primeira equipe a vencer o melhor de 24 rodadas vence a partida.
+    </p>
+
+    <h3>Os agentes do Valorant são categorizados por quatro funções</h3>
+    <p>Controlador, Duelista, Iniciador e Sentinela. Cada uma dessas exerce um <b>grande</b> papel dentro do planejamento estratégico e tático das equipes.</p>
+
+    <h4>Onde dá pra jogar VALORANT?</h4>
+    <p>Inicialmente o valorant era pra <b>PC</b>, mas agora podem jogar em consoles <b>PS5</b> ou Xbox Series SX</p>
+
+
+
+    <img src="vavab9 copy.webp" width="400"> 
+    <h2>trailer valorant</h2>
+    <p>veja o primeiro trailer do jogo valorant<a href="https://www.youtube.com/results?search_query=trailer+valorant+primeiro"> valorant trailer</a></p>
+
+<body>
 </html>
